<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".AlmostThere">

    <TextView
        android:id="@+id/txt_almost_there"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almosttherte"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:textColor="@color/Background"/>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txt_almost_there"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Background"
        android:text="@string/thankyou"/>

    <Button
        android:id="@+id/btn_almost_there"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_desc"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/verify"
        android:textColor="@color/Background"
        android:background="@drawable/button_blue"
        />

</RelativeLayout>