<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            android:id="@+id/header_register"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:elevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_header"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_header_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="35dp"
                    android:text="@string/register"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.v7.widget.CardView>


        <EditText
            android:id="@+id/edt_username_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_register"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:paddingBottom="20dp"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_username_regis"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:backgroundTint="@color/fontdesc"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_phone"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/male"
            android:textColor="@color/fontdesc"
            android:checked="true"
            android:buttonTint="@color/lightblue"/>

        <RadioButton
            android:id="@+id/rdb_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_phone"
            android:layout_alignParentRight="true"
            android:layout_marginRight="90dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/female"
            android:textColor="@color/fontdesc" />

        <EditText
            android:id="@+id/spr_blood"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rdb_male"
            android:layout_marginLeft="30dp"
            android:drawableRight="@drawable/ic_arrow_dropdown"
            android:hint="@string/bloodtype"
            android:layout_marginTop="5dp"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/spr_reshus"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdb_male"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_arrow_dropdown"
            android:text="Reshus"
            android:layout_marginTop="5dp"
            android:textColor="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_password_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spr_blood"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password_regis"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:hint="Retype Password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdb_personal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_retype_password"
            android:layout_marginLeft="50dp"
            android:paddingLeft="15dp"
            android:text="@string/personal"
            android:checked="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/fontdesc"
            android:buttonTint="@color/lightblue"/>

        <RadioButton
            android:id="@+id/rdb_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_retype_password"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:paddingLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/organization"
            android:textColor="@color/fontdesc" />

        <EditText
            android:id="@+id/spr_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rdb_organization"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:drawableRight="@drawable/ic_arrow_dropdown"
            android:hint="@string/job"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_home_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spr_job"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingBottom="20dp"
            android:textColor="@android:color/black"
            android:hint="@string/homeaddress"
            android:inputType="text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_job_regis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_home_address"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/fontdesc"
            android:drawableRight="@drawable/ic_blood_needed_location"
            android:hint="@string/defaultlocation"
            android:inputType="text"
            android:textColor="@color/fontdesc"
            android:textColorHint="@color/fontdesc"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/chk_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_job_regis"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="15dp"
            android:text="Agree with Terms and Conditions"
            android:textColor="@color/fontdesc"
            android:buttonTint="@color/lightblue" />

        <Button
            android:id="@+id/btn_regis"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/chk_agree"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_white"
            android:text="REGISTER"
            android:layout_marginBottom="20dp"
            android:textColor="@color/lightblue" />

    </RelativeLayout>
</ScrollView>