<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".Login"
    android:fillViewport="true" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/img_welcome_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:src="@drawable/ic_welcome_logo"
            android:tint="@color/Background"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_welcome_logo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/Background"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingBottom="20dp"
            android:textColor="@color/Background"
            android:textColorHint="@color/Background"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_username"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/Background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:textColor="@color/Background"
            android:textColorHint="@color/Background"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/edt_password"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_blue"
            android:text="@string/login"
            android:textColor="@color/Background"
            android:textSize="14sp" />
        
        <TextView
            android:id="@+id/txt_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="@color/Background" />

        <Button
            android:id="@+id/btn_connect_fb"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/txt_or"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_blue"
            android:drawableLeft="@drawable/ic_welcome_fb_login"
            android:paddingLeft="30dp"
            android:paddingRight="55dp"
            android:text="@string/connectwithfb"
            android:textColor="@color/Background"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/txt_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_connect_fb"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/doesntaccount"
            android:textColor="@color/Background"
            android:textColorLink="@color/Background"
            android:textSize="13sp" />


    </RelativeLayout>


</ScrollView>